removed package-lock.json and reinstalled contents of package.json to project, commented out globals.css scrollbar styling, added sizes hook to image on Homepage component, imported motion, useScroll, and useRef hooks to about page.jsx, also added a comment about a bug that is keeping the page prev value at 1 instead of starting at 0 for MotionValue, attempted to add transformation styled on brain.jsx but as previously mentioned is not working as intended, removed console.logging of pathName on navLink.jsx

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 /* For WebKit-based browsers (Chrome, Safari, etc.) */
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 15px;
 }
 
@@ -18,4 +18,4 @@
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgba(0, 0, 0, 0.417);
-}
+} */
